# Mod

./: .flake8  .gitignore  .pylintrc  BENCHMARK_DISCOVERY_IMPLEMENTATION.md  BENCHMARK_STANDARDIZATION_GUIDE.md  BENCHMARK_STANDARDIZATION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLIDATED_ATTENTION_MECHANISM_SUMMARY.md  CONTRIBUTING.md  CROSS_DEPENDENCY_ELIMINATION_SUMMARY.md  CROSS_FUSION_IMPLEMENTATION_SUMMARY.md  CUDA_KERNEL_IMPLEMENTATION_SUMMARY.md  DEBUG_LOGGING_CLEANUP_SUMMARY.md  DETAILED_TEST_LOG.md  ENHANCED_TEST_UTILS_SUMMARY.md  FINAL_EXECUTION_SUMMARY.md  FINAL_HARDWARE_OPTIMIZATIONS_FIXES.md  HARDWARE_OPTIMIZATIONS_SUMMARY.md  HARDWARE_OPTIMIZATION_FIXES_SUMMARY.md  IMPORT_STANDARDIZATION_REPORT.md  INTELLIGENT_CACHE_IMPLEMENTATION_SUMMARY.md  INTELLIGENT_SCHEDULING_IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_VERIFICATION_REPORT.md  NAMING_STANDARDIZATION_SUMMARY.md  OPTIMIZATION_STRUCTURE.md  PERFORMANCE_REGRESSION_SYSTEM.md  PLUGINS_SUMMARY.md  PREDICTIVE_MEMORY_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_ANALYSIS.md  SECURITY.md  SPECIALIZED_ATTENTION_IMPLEMENTATION_SUMMARY.md  TESTING_FRAMEWORK.md  TEST_AND_BENCHMARK_RESULTS.md  TEST_DISCOVERY.md  TEST_EXECUTION_SUMMARY.md  TEST_FIXTURES_DOCUMENTATION.md  TEST_OPTIMIZATION_README.md  (+132 more)
.github/: README.md
.test_cache/: test_results.json
benchmark_results/: ALL_MODELS_BENCHMARK_RESULTS.md  comparison_benchmark_results_mocked.json  focused_benchmark_summary_report.txt  glm_4.7_inference_speed_comparison_20260121_204341.csv  glm_4.7_inference_speed_comparison_20260121_204341.json  glm_4_7_benchmark_accuracy_output.txt  glm_4_7_benchmark_inference_speed_output.txt  glm_4_7_benchmark_optimization_impact_output.txt  glm_4_7_benchmark_throughput_output.txt  glm_4_7_results.json  inference_speed_focused_benchmark_results.json  memory_usage_benchmark_results_mocked.json  mock_comprehensive_benchmark_results_detailed_20260118_072126.json  mock_comprehensive_benchmark_results_summary_20260118_072126.json  qwen3_4b_instruct_2507_benchmark_accuracy_output.txt  qwen3_4b_instruct_2507_benchmark_inference_speed_output.txt  qwen3_4b_instruct_2507_benchmark_memory_usage_output.txt  qwen3_4b_instruct_2507_benchmark_optimization_impact_output.txt  qwen3_4b_instruct_2507_benchmark_power_efficiency_output.txt  qwen3_4b_instruct_2507_benchmark_throughput_output.txt  qwen3_4b_instruct_2507_inference_speed_comparison_20260121_204341.csv  qwen3_4b_instruct_2507_inference_speed_comparison_20260121_204341.json  qwen3_coder_30b_benchmark_accuracy_output.txt  qwen3_coder_30b_benchmark_inference_speed_output.txt  qwen3_coder_30b_benchmark_memory_usage_output.txt  qwen3_coder_30b_benchmark_optimization_impact_output.txt  qwen3_coder_30b_benchmark_power_efficiency_output.txt  qwen3_coder_30b_benchmark_throughput_output.txt  qwen3_coder_30b_inference_speed_comparison_20260121_204341.csv  qwen3_coder_30b_inference_speed_comparison_20260121_204341.json  qwen3_coder_30b_results.json  qwen3_vl_2b_benchmark_accuracy_output.txt  qwen3_vl_2b_benchmark_inference_speed_output.txt  qwen3_vl_2b_benchmark_memory_usage_output.txt  qwen3_vl_2b_benchmark_optimization_impact_output.txt  qwen3_vl_2b_benchmark_power_efficiency_output.txt  qwen3_vl_2b_benchmark_throughput_output.txt  qwen3_vl_2b_inference_speed_comparison_20260121_204341.csv  qwen3_vl_2b_inference_speed_comparison_20260121_204341.json  qwen3_vl_2b_results.json  (+7 more)
benchmarks/: README.md  __init__.py  accuracy_preservation_tests.py  accuracy_validator.py  automated_test_framework.py  benchmark_base.py  benchmark_sm61_kernels.py  benchmark_utils.py  comparative_benchmarks.py  comprehensive_benchmark.py  comprehensive_benchmark_runner.py  comprehensive_benchmark_suite.py  corrected_standardized_benchmark_suite.py  device_fallback_validator.py  discovery.py  hardware_specific_benchmarks.py  main_benchmark_runner.py  memory_efficiency_tests.py  memory_profiler.py  multimodal_benchmark.py  optimization_synergy_benchmarks.py  scalability_tests.py  standardized_benchmark_suite.py  standardized_benchmark_suite_fixed.py  standardized_runner.py  system_benchmarks.py
configs/: README.md
dev_tools/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  automated_testing.py  benchmarking_tools.py  check_model_updates.py  code_quality.py  config_validation.py  correct_migration_script.py  demonstrate_feedback_system.py  diagnostic_check.py  documentation_generator.py  fix_benchmark_imports.py  migrate_qwen3_vl_code.py  model_inspection.py  profiling_tools.py  requirements.txt  run_comprehensive_tests.py  setup.py  simple_migration_script.py  simple_verify.py  test_dev_tools.py  validate_pre_commit_config.py
docs/: ARCHITECTURE_OVERVIEW.md  BENCHMARK_FRAMEWORK_GUIDE.md  BENCHMARK_UPDATES_EXECUTIVE_SUMMARY.md  CI_CD_TEST_REPORTING.md  COMPREHENSIVE_MODEL_REFERENCE.md  CONFIGURATION_GUIDE.md  CONTINUOUS_NAS_IMPLEMENTATION.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  EXAMPLE_TESTS.md  FEEDBACK_SYSTEM_DOCUMENTATION.md  GUIDE_CPU_PLUGINS.md  GUIDE_GPU_PLUGINS.md  GUIDE_MODEL_PLUGINS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MODEL_IMPLEMENTATIONS.md  PLUGIN_SYSTEM_API.md  PROJECT_REORGANIZATION_SUMMARY.md  QUICK_START.md  README.md  STANDARDIZED_MODEL_ARCHITECTURE.md  STANDARD_PLUGIN_ARCHITECTURE.md  STREAMING_COMPUTATION_IMPLEMENTATION.md  SUMMARY.md  TESTING_ECOSYSTEM.md  TESTING_FRAMEWORK_GUIDE.md  TESTING_GUIDELINES.md  TEST_DISCOVERY_GUIDE.md  TEST_STRUCTURE.md  UNIFIED_MODEL_REFERENCE.md  creating_model_plugin_guide.md  dependency_consolidation_summary.md  dependency_management.md  method_signature_standards.md  multimodal_attention_system.md  plugin_initialization_consolidation.md  test_fixtures_guidelines.md  test_naming_conventions.md  test_structure_reorganization.md  (+1 more)
examples/: README.md  demo_consolidated_attention_mechanism.py  demo_flexible_model_system.py  multimodal_attention_example.py  streaming_example.py  test_fixture_examples.py  unified_discovery_example.py  unimodal_cuda_kernels_demo.py
performance_exports/: performance_metrics_export_20260125_210704.csv
scripts/: README.md  (+14 more)
(+2672 files in other folders)
