[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools"

[project]
name = "qwen3-vl"
version = "1.0.0"
authors = [
    {name = "Qwen3-VL Development Team", email = "qwen3-vl@example.com"},
]
description = "Qwen3-VL-2B-Instruct: A multimodal large language model with optimized performance"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "sentencepiece",
    "numpy>=1.21.0",
    "pillow>=8.0.0",
    "accelerate>=0.20.0",
    "bitsandbytes",
    "scipy>=1.7.0",
    "matplotlib",
    "pandas",
    "tqdm>=4.64.0",
    "datasets>=2.0.0",
    "evaluate>=0.4.0",
    "scikit-learn",
    "sortedcontainers",
    "safetensors>=0.3.0",
    "huggingface_hub>=0.14.0",
    "pydantic>=1.10.0",
    "requests>=2.28.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.19.0",
    "pytest>=6.0.0",
    "pytest-mock>=3.6.0",
    "pytest-cov>=2.0",
    "pytest-benchmark>=4.0.0",
]
torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
power = [
    "psutil>=5.8.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-mock>=3.6.0",
    "pytest-cov>=2.0",
    "pytest-benchmark>=4.0.0",
]
perf = [
    "memory-profiler>=0.60.0",
    "nvidia-ml-py3>=11.495.0",
]
all-dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pre-commit>=2.19.0",
    "pytest>=6.0.0",
    "pytest-mock>=3.6.0",
    "pytest-cov>=2.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.60.0",
    "nvidia-ml-py3>=11.495.0",
]

[project.scripts]
qwen3-vl-infer = "src.qwen3_vl.inference.cli:main"

[project.urls]
Homepage = "https://github.com/example/qwen3-vl"
Repository = "https://github.com/example/qwen3-vl"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qwen3_vl*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]