[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "torch>=2.0.0",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "inference-pio"
version = "1.0.0"
description = "Inference-PIO: Self-Contained Plugin Architecture for Advanced Model Inference"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Inference-PIO Team", email = "inference-pio@maintainers.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "transformers>=4.35.0",
    "tokenizers>=0.14.0",
    "sentencepiece",
    "protobuf",
    "accelerate",
    "datasets",
    "evaluate",
    "bitsandbytes",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "psutil",
    "pybind11",
    "dependency-injector>=4.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "flash-attn>=2.4.0",
    "xformers>=0.0.23",
    "einops>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "isort",
    "pylint",
    "autoflake",
    "yapf",
]
perf_regression = [
    "requests>=2.25.0",
]
cuda = [
    "ninja",  # For faster builds
]
vision = [
    "Pillow",
    "opencv-python",
    "timm"
]
multimodal = [
    "Pillow",
    "opencv-python",
    "timm"
]

[project.urls]
Homepage = "https://github.com/inference-pio/inference-pio"
Repository = "https://github.com/inference-pio/inference-pio"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    "venv",
    "node_modules",
    ".tox",
    ".eggs",
    "build",
    "dist",
    "src/inference_pio.egg-info"
]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused in __init__.py files
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
exclude = [
    "src/inference_pio.egg-info",
    ".git",
    "__pycache__",
    ".mypy_cache",
    "venv",
    "build",
    "dist"
]

[tool.coverage.run]
source = [
    "src/"
]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.env/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*",
    "*/.git/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
